2013-04-17  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c: "ibus" is added to the message of --im option.
	  (Thanks to @tsutsuii)

	* fb/x_display.c: Minor fixes.

2013-04-16  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Minor fixes.

	* fb/x_window.c: Minor fixes.

2013-04-15  Araki Ken  <arakiken@users.sf.net>

	* im_uim.c, im_ibus.c, fb/x.h: XK_Hiragana_Katakana is supported.

	* x_screen_manager.c, im_ibus.c, fb/x_display.c: Minor fixes.

2013-04-14  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c:
	  - x_window_resize() always calls clear_margin_area() for
	    input method window.
	  - x_window_map() calls clear_margin_area().

	* fb/x_display.c: Minor fixes around IME window.

	* im_scim_mod_if.c: Candidate window is shown after the 2nd candidate.

	* im_ibus.c: "show-lookup-table" and "hide-lookup-table" events are processed
	  in framebuffer.

2013-04-13  Araki Ken  <arakiken@users.sf.net>

	* README, doc/ja/README.fb: Updated.

	* configure.in, main/Makefile.in: -lpthread is added in compiling mlterm
	  in NetBSD if ./configure is executed with --enable-ibus, --enable-ssh2
	  or --with-type-engines=cairo option unless --without-pthread is
	  specified.

2013-04-13  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/READBE.fb: Updated.

	* inputmethod/kbd/Makefile.in:
	  libim-kbd.so -> libim-kbd-fb.so in framebuffer.

2013-04-13  Araki Ken  <arakiken@users.sf.net>

	* fb/x.h, win32/x.h: IsModifierKey() which is used by im_m17nlib.c is added.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* libctl/ml_bidi.c: <fribidi/fribidi.h> -> <fribidi.h>

	* im_m17nlib.c: Compilation error is fixed.

	* inputmethod/m17nlib/Makefile.in:
	  libim-m17nlib.so -> libim-m17nlib-fb.so in framebuffer.

	* inputmethod/*/Makefile.in: Minor fixes.

	* x_im_candidate_screen.c: Minor fixes.

	* fb/x_display.c: /dev/wskbd is opened instead of /dev/wskbd0 because
	  "wsconsctl encoding" command returns "encoding=unknown_0" if